# TinyML_KeyWord

./: .gitignore  CMakeLists.txt  README.md  STM32F746XX_FLASH.ld  STM32F746ZG_KEYWORD.ioc  build.sh  toolchain-arm-none-eabi.cmake
core/src/: adc.c  gpio.c  i2c.c  main.c  stm32f7xx_it.c  syscalls.c  tim.c  usart.c
docs/: 01产品需求文档（Product Specification）.md  02产品概要设计（Architecture Design）.md  03代码详细设计.md  DesignDoc_Keyword Spotting.md
drivers/CMSIS/Core/Include/: core_cm7.h
drivers/CMSIS/DSP/: CMakeLists.txt
training/data/: speech_commands.py
training/data/preprocessed/: commands.txt
training/model_training/: model.py  train_model.py
training/scripts/: check_labels.py  precompute_features.py  visualize_activations.py
training/utils/: config.py
